Add 03-Modelling-Diseases.Rmd to bookdown site

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -9,3 +9,4 @@ rmd_files:
   - "index.Rmd"
   - "Chapters/01-Introduction.Rmd"
   - "Chapters/02-Introduction-to-Mathematical-Modelling.Rmd"
+  - "Chapters/03-Modelling-Diseases.Rmd"
