--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -14,3 +14,4 @@ rmd_files:
   - "Chapters/05-Next-Generation-Matrix.Rmd"
   - "Chapters/06-Real-World-Applications-and-Solutions.Rmd"
   - "Chapters/07-Spatial-Epidemiology.Rmd"
+  - "Chapters/08-Stochastic-Models.Rmd"
